# android-call-recorder

./: .gitignore  README.md  apk  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/github/axet/audiorecorder/: ApplicationTest.java
app/src/androidTest/java/com/github/axet/callrecorder/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/axet/audiorecorder/activities/: AppCompatPreferenceActivity.java  MainActivity.java  RecordingActivity.java  SettingsActivity.java
app/src/main/java/com/github/axet/audiorecorder/animations/: MarginAnimation.java  MarginBottomAnimation.java  RecordingAnimation.java  RemoveItemAnimation.java  StepAnimation.java
app/src/main/java/com/github/axet/audiorecorder/app/: MainApplication.java  RawSamples.java  Sound.java  Storage.java
app/src/main/java/com/github/axet/audiorecorder/encoders/: Encoder.java  EncoderInfo.java  Factory.java  FileEncoder.java  Format3GP.java  FormatM4A.java  FormatMKA.java  FormatOGG.java  FormatWAV.java  MuxerMP4.java  Wav.java
app/src/main/java/com/github/axet/audiorecorder/services/: RecordingService.java
app/src/main/java/com/github/axet/audiorecorder/widgets/: EqualLinearLayout.java  FFTBarView.java  FFTChartView.java  FFTView.java  OpenFileDialog.java  PitchView.java  PopupShareActionProvider.java  StoragePathPreference.java
app/src/main/java/com/github/axet/callrecorder/activities/: AppCompatPreferenceActivity.java  CallActivity.java  MainActivity.java  RecentCallActivity.java  Recordings.java  SettingsActivity.java
app/src/main/java/com/github/axet/callrecorder/app/: MainApplication.java  MixerPaths.java  Storage.java
app/src/main/java/com/github/axet/callrecorder/services/: OnBootReceiver.java  OnExternalReceiver.java  OnUpgradeReceiver.java  RecordingService.java
app/src/main/java/com/github/axet/callrecorder/widgets/: MixerPathsPreferenceCompat.java  NameFormatPreferenceCompat.java
app/src/main/res/drawable/: round_corners_dark.xml  round_corners_light.xml
app/src/main/res/layout/: activity_call.xml  activity_main.xml  activity_recentcall.xml  activity_recording.xml  content_main.xml  notifictaion_recording.xml  recording.xml  toolbar.xml  warning.xml
app/src/main/res/menu/: menu_context.xml  menu_main.xml
app/src/main/res/raw/: about.html
app/src/main/res/raw-ja/: about.html
app/src/main/res/raw-ru/: about.html
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: pref_general.xml
app/src/main/res/xml-ja/: pref_general.xml
app/src/main/res/xml-ru/: pref_general.xml
app/src/main/res/xml-ru-v14/: pref_general.xml
app/src/main/res/xml-v14/: pref_general.xml
app/src/test/java/com/github/axet/callrecorder/: ExampleUnitTest.java
docs/: HOWTO-Translate.md  README.md  fft.py
libvorbis/: build.gradle
libvorbis/src/main/: AndroidManifest.xml
vorbis/: CMakeLists.txt  build.gradle
vorbis/libogg/: CMakeLists.txt  build.gradle
vorbis/libogg/src/androidTest/java/com/github/axet/ogg/: ExampleInstrumentedTest.java
vorbis/libogg/src/main/: AndroidManifest.xml
vorbis/libogg/src/main/cpp/include/ogg/: config_types.h
vorbis/libogg/src/test/java/com/github/axet/ogg/: ExampleUnitTest.java
vorbis/libvorbis/: CMakeLists.txt  build.gradle
vorbis/libvorbis/src/main/: AndroidManifest.xml
vorbis/src/androidTest/java/com/github/axet/vorbisjni/: ExampleInstrumentedTest.java
vorbis/src/main/: AndroidManifest.xml
vorbis/src/main/cpp/: jni.c
vorbis/src/main/java/com/github/axet/vorbisjni/: Vorbis.java
vorbis/src/main/res/values/: strings.xml
vorbis/src/test/java/com/github/axet/vorbisjni/: ExampleUnitTest.java
